fixed video slider postion on smaller screens

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@
         position: fixed;
         top: 0;
         z-index: 2;
-        object-fit: contain;   
+         
     }
 
 }
@@ -347,7 +347,13 @@
     width: 100%;
     position: relative;
  }
-
+ @media only screen and (max-width: 1000px)
+ {
+    .videoslider
+    {
+        top: 60px;
+    }
+ }
  .frontvideo
  {
     background-color: #F46036;
